<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/ivProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/profile_imageview_description"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:text="@string/foo_label" />

    <TextView
        android:id="@+id/tvBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvUserName"
        android:layout_toRightOf="@+id/ivProfileImage"
        android:autoLink="all"
        android:text="@string/tweet_body" />

    <TextView
        android:id="@+id/tvTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@+id/ivTimeStamp"
        android:layout_marginRight="12dp"
        android:textColor="#A4A4A4"
        android:text="@string/time_stamp_label" />

    <ImageView
        android:id="@+id/ivTimeStamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginRight="2dp"
        android:layout_marginTop="5dp"
        android:scaleType="centerInside"
        android:adjustViewBounds="true"
        android:maxHeight="18dp"
        android:layout_toLeftOf="@+id/tvTimeStamp"
        android:src="@drawable/ic_time_stamp" />

</RelativeLayout>
