<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/ivUserProfileImage"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUserProfileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivUserProfileImage"
        android:layout_marginLeft="16dp"
        android:layout_toRightOf="@+id/ivUserProfileImage"
        android:text="@string/user_name_label" />

    <TextView
        android:id="@+id/tvUserScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUserProfileName"
        android:layout_below="@+id/tvUserProfileName"
        android:text="@string/foo_label" />

    <EditText
        android:id="@+id/etTweet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ivUserProfileImage"
        android:ems="10"
        android:hint="@string/compose_tweet_hint"
        android:inputType="textMultiLine" >

        <requestFocus />
    </EditText>

</RelativeLayout>
