<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/ivProfImage"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:src="@drawable/ic_launcher" />

    <TextView
        android:id="@+id/tvUsersName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivProfImage"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@+id/ivProfImage"
        android:text="@string/user_name_label" />

    <TextView
        android:id="@+id/tvScreenName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvUsersName"
        android:layout_below="@+id/tvUsersName"
        android:text="@string/foo_label" />

    <TextView
        android:id="@+id/tvTweetBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/ivProfImage"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:autoLink="all"
        android:text="@string/tweet_body_label" />

    <ImageView
        android:id="@+id/ivTweetReply"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignLeft="@+id/tvTweetBody"
        android:layout_below="@+id/tvTweetBody"
        android:layout_marginTop="15dp"
        android:onClick="onReplyTweet"
        android:src="@drawable/ic_action_tweet_reply" />

</RelativeLayout>
